tests/snapshot/error/source_locations/destructure/member/set_named_property.js
var obj = {
  set foo(_) {
    throw new Error();
  }
};

({ x: obj.foo } = { x: 1 });